aau/sf_autobackup/objects/ps_Enrollment__c.object
<CustomObject>
    <fields>
        <fullName>Class_Section__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Class Section</label>
        <referenceTo>ps_Class__c</referenceTo>
        <relationshipLabel>ps_Enrollments</relationshipLabel>
        <relationshipName>Enrollments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Enrollment_Add_Date__c</fullName>
        <label>Enrollment Add Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enrollment_Drop_Date__c</fullName>
        <label>Enrollment Drop Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enrollment_Status_Reason__c</fullName>
        <label>Enrollment Status Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enrollment_Status__c</fullName>
        <label>Enrollment Status</label>
        <picklist>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <label>Grade</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Psft_Ext_Id__c</fullName>
        <externalId>true</externalId>
        <label>Psft Ext Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <label>Student</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>xEnrollments</relationshipLabel>
        <relationshipName>xEnrollments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>ps_Enrollment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Student__c</columns>
        <columns>Enrollment_Status__c</columns>
        <columns>Enrollment_Add_Date__c</columns>
        <columns>Class_Section__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Enrollment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ps_Enrollments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>